--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://bfjeljggqs0r7tbqbvm2-mysql.services.clever-cloud.com:3306/bfjeljggqs0r7tbqbvm2?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= uydrser5cjwdwebs
-spring.datasource.password						= UFIXCWvT6gG1g7ZZ2OCA
+spring.datasource.url							= jdbc:mysql://bjgnjbpoznv2tilqbkub-mysql.services.clever-cloud.com:3306/bjgnjbpoznv2tilqbkub?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= uxniairtchwlqpsi
+spring.datasource.password						= Va6kkTbELMsG1qzAwc6V
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
